Fix scrollbar issue on images

--- a/src/_shared/scss/_advert.scss
+++ b/src/_shared/scss/_advert.scss
@@ -125,7 +125,7 @@
 /* [1] Prevents IE11 bug where the image container's height would go ballooney */
 .advert__image-container {
     order: -1;
-    overflow: auto; /* [1] */
+    overflow: hidden; /* [1] */
     margin-bottom: $gs-baseline / 2;
     width: 100%;
 
